# poetry-demo

./: .env_template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
poetry_demo/: asgi.py  entrypoint_dev.sh  settings.py  urls.py  wsgi.py
