[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
# poetry add git+https://github.com/frankhood/django-wysiwyg-redactor.git#django3.2
django-wysiwyg-redactor = {git = "https://github.com/frankhood/django-wysiwyg-redactor.git", rev = "django3.2"}



[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
